azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-23.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..8
      TagProperty@0..8
        SecondaryTagHandle@0..2 "!!"
        TagSuffix@2..8 "suffix"
    ,
    errors: [],
}
