azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-24.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..7
      TagProperty@0..7
        SecondaryTagHandle@0..2 "!!"
        TagSuffix@2..7 "(bar)"
    ,
    errors: [],
}
