azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-6.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..2
      VerbatimTagStart@0..2 "!<"
      Error@2..2 ""
    ,
    errors: [
        Diagnostic {
            span: 2..2,
            severity: Error,
            message: "invalid verbatim tag character",
        },
    ],
}
