azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-9.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..6
      TagProperty@0..6
        VerbatimTagStart@0..2 "!<"
        VerbatimTag@2..5 "foo"
        VerbatimTagEnd@5..6 ">"
    ,
    errors: [],
}
