azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__yaml_directive-6.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..9
      Directive@0..9
        DirectiveToken@0..1 "%"
        YamlDirective@1..9
          DirectiveName@1..5 "YAML"
          InlineSeparator@5..6 " "
          YamlVersion@6..9 "1.2"
    ,
    errors: [],
}
