azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__yaml_directive-9.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..11
      Directive@0..11
        DirectiveToken@0..1 "%"
        YamlDirective@1..11
          DirectiveName@1..5 "YAML"
          InlineSeparator@5..6 " "
          Error@6..11 "1.foo"
    ,
    errors: [
        Diagnostic {
            span: 6..11,
            severity: Error,
            message: "invalid YAML version: expected digit",
        },
    ],
}
